# serializer version: 1
# name: TestGet.test_active
  dict({
    'active': True,
    'color': <MessageColor.yellow: 'yellow'>,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 2,
    'message': 'This is test message 2',
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_create
  dict({
    'active': True,
    'color': <MessageColor.blue: 'blue'>,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 1,
    'message': 'This is a test message',
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_update
  dict({
    'active': True,
    'color': <MessageColor.red: 'red'>,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 1,
    'message': 'Updated Message',
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
